styles/global.scss
@import "variables.scss";

@font-face {
  font-family: "National Park";
  src: url("/fonts/NationalPark-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "National Park";
  src: url("/fonts/NationalPark-Bold.woff2") format("woff2");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "National Park";
  src: url("/fonts/NationalPark-ExtraBold.woff2") format("woff2");
  font-weight: 800;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "National Park";
  src: url("/fonts/NationalPark-Medium.woff2") format("woff2");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "National Park";
  src: url("/fonts/NationalPark-SemiBold.woff2") format("woff2");
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "National Park";
  src: url("/fonts/NationalPark-Light.woff2") format("woff2");
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "National Park";
  src: url("/fonts/NationalPark-ExtraLight.woff2") format("woff2");
  font-weight: 200;
  font-style: normal;
  font-display: swap;
}

/** TYPOGRAPHY **/

h1,
h2,
h3,
h4,
.text-body-large,
.text-body-mono,
.text-body,
.text-body-caption {
  letter-spacing: 0.0125rem;
}

h1 {
  font-size: 2.5rem;
  line-height: 1.1;
  -webkit-text-stroke-width: 0.2px;
  margin-bottom: var(--spacing-md);
  font-family: var(--font-sans);

  @media (min-width: $breakpoint-tablet) {
    font-size: 4rem;
    font-size: 3.5rem;
    line-height: 1;
    -webkit-text-stroke-width: 0.25px;
  }
}

.text-h2,
h2 {
  font-size: 2rem;
  line-height: 1.125;
  -webkit-text-stroke-width: 0.2px;
  font-family: var(--font-sans);
  margin-top: var(--spacing-lg);

  @media (min-width: $breakpoint-tablet) {
    font-size: 2.5rem;
    line-height: 1.1;
    -webkit-text-stroke-width: 0.2px;
  }
}

.text-h3,
h3 {
  font-size: 1.5rem;
  line-height: 1.167;
  -webkit-text-stroke-width: 0.15px;
  font-family: var(--font-sans);
  margin-top: var(--spacing-md);

  @media (min-width: $breakpoint-tablet) {
    font-size: 1.875rem;
    line-height: 1.1333;
    -webkit-text-stroke-width: 0.2px;
  }
}

.text-h4,
h4 {
  font-size: 1.25rem;
  line-height: 1.167;
  -webkit-text-stroke-width: 0.1px;
  font-family: var(--font-sans);
  margin-top: var(--spacing-md);

  @media (min-width: $breakpoint-tablet) {
    font-size: 1.5rem;
    line-height: 1.1333;
    -webkit-text-stroke-width: 0.15px;
  } 
}

.text-body-large {
  font-size: 1.25rem;
  line-height: 1.2;
  -webkit-text-stroke-width: 0.1px;
  font-family: var(--font-sans);

  @media (min-width: $breakpoint-tablet) {
    font-size: 1.5rem;
    line-height: 1.167;
    -webkit-text-stroke-width: 0.15px;
  }
}

.text-body-mono {
  font-size: 1rem;
  line-height: 1.25;
  -webkit-text-stroke-width: 0.05px;
  font-family: var(--font-serif);

  @media (min-width: $breakpoint-tablet) {
    font-size: 1.25rem;
    line-height: 1.2;
    -webkit-text-stroke-width: 0.1px;
  }
}

.text-body {
  font-size: 1rem;
  line-height: 1.25;
  -webkit-text-stroke-width: 0.05px;
  font-family: var(--font-sans);

  @media (min-width: $breakpoint-tablet) {
    font-size: 1.25rem;
    line-height: 1.2;
    -webkit-text-stroke-width: 0.15px;
  }
}

.text-body-caption {
  font-size: 0.75rem;
  line-height: 1.33;
  -webkit-text-stroke-width: 0.05px;
  font-family: var(--font-sans);

  @media (min-width: $breakpoint-tablet) {
    font-size: 0.875rem;
    line-height: 1.42;
    -webkit-text-stroke-width: 0.1px;
  }
}

/** BASE ELEMENTS **/

body {
  background-color: var(--bg-color);
  color: var(--type-color);
  -webkit-text-stroke-color: currentcolor;
  @extend .text-body;
  font-weight: 400;
}

p {
  margin-top: 1.25rem;
}

a {
  &:hover {
    text-decoration: underline;
  }
}

code {
  @extend .text-body-mono;
  font-size: inherit;
  background-color: var(--bg-gray-80);
  border-radius: 20px;
  padding: 0 var(--spacing-xxs);
  .dark-theme &:not(.code-box) {
    color: var(--type-black);
  }
}

hr {
  border-top: 1px solid var(--type-color);
}

section,
.section {
  border-bottom-width: 1px;
  border-color: var(--type-color);
  padding-bottom: var(--gutter-lg);
  margin-top: var(--gutter-sm);

  &:last-child {
    border-width: 0px;
  }

  h2,
  .text-h2 {
    margin-top: var(--gutter-md);
    margin-bottom: 0px;
  }

  h2,
  .text-h2,
  h3,
  text-h3 {
    &,
    & > * {
      scroll-margin-top: var(--gutter-md);
      @media (min-width: $breakpoint-tablet) {
        scroll-margin-top: var(--gutter-sm);
      }
    }
  }
}

.astro-code,
.reference-item pre {
  margin-top: var(--spacing-md);
  margin-bottom: var(--spacing-md);
}

.astro-code code,
.code-box code {
  background-color: transparent;
  border-radius: 0;
  padding: 0;
}

.astro-code,
.code-box,
.reference-item pre {
  background-color: var(--bg-gray-40) !important;
  padding: var(--spacing-sm);
  max-width: 100%;
  overflow-x: auto;

  border-radius: 20px;
  @media (max-width: $breakpoint-tablet) {
    border-radius: 10px;
  }

  .dark-theme & {
    background-color: #ddd !important;
    filter: invert(100%);
  }
}

.reference-item pre code {
  background-color: transparent;
}

.astro-code pre,
pre.astro-code,
.code-box pre,
pre.code-box,
.reference-item pre {
  white-space: break-spaces;
}

.callout, .experimental, .deprecated {
  padding: var(--spacing-sm);
  border-radius: 20px;
  background-color: var(--bg-magenta-20);
  margin-bottom: var(--spacing-md);
  margin-top: var(--spacing-md);

  .dark-theme & {
    color: var(--type-black);
  }

  & h5 {
    font-weight: bold;
    margin-bottom: var(--spacing-sm);
  }
}

.experimental, .deprecated {
  background-color: var(--bg-yellow);
}

.callout.callout-note {
  background-color: var(--bg-blue);
}

.sidebar {
  background-color: var(--sidebar-bg-color);
  color: var(--sidebar-type-color);
}

/** LAYOUT **/

.top-layout-grid {
  --nav-width: 100%;
  --nav-offset-x: 0;

  @media (min-width: $breakpoint-tablet) {
    --nav-width: 200px;
    --nav-offset-x: var(--nav-width);
  }

  nav {
    width: var(--nav-width);
    position: sticky;
    top: 0;
    background-color: var(--bg-color);
    z-index: 10000;

    @media (min-width: $breakpoint-tablet) {
      position: fixed;
      height: 100vh;
    }
  }

  .banner,
  .settings,
  header,
  main,
  footer {
    margin-left: var(--nav-offset-x);
  }

  .banner {
    display: flex;
    flex-direction: row;
    position: sticky;
    bottom: 0;
    padding: var(--spacing-xs) var(--spacing-md);
    border-top: 1px solid var(--type-color);

    & .banner-content {
      flex: 1;
      margin-right: var(--pacing-sm);
    }

    @media (min-width: $breakpoint-tablet) {
      padding: var(--spacing-sm) var(--spacing-lg);
    }

    & p {
      margin: 0;
    }
  }

  header {
    .homepage-header-top {
      display: flex;
      flex-direction: column;
      justify-content: space-between;

      // 43px is the height of the top mobile bar menu
      height: calc(50vh - var(--spacing-5xl) - 43px);
      max-height: calc(50vh - var(--spacing-5xl) - 43px);

      @media (min-width: $breakpoint-tablet) {
        height: calc(50vh - var(--spacing-5xl));
        max-height: calc(50vh - var(--spacing-5xl));
        min-height: 300px;
      }

      @media (min-width: $breakpoint-laptop) {
        height: calc(50vh - var(--spacing-3xl));
        max-height: calc(50vh - var(--spacing-3xl));
      }
    }

    @media (min-width: $breakpoint-tablet) {
      margin-top: 0;
    }
  }
}

.monochrome-theme {
  img {
    filter: grayscale(100%);
  }
}

.dark-theme .invert-in-dark {
  filter: invert(100%);
}

// Grid that switches from 2 to 3 to 4 columns as screen gets bigger
// Usually used with items that have a column width of 3
.content-grid {
  display: grid;
  grid-template-columns: repeat(6, minmax(0, 1fr));
  column-gap: var(--gutter-sm);
  row-gap: var(--gutter-md);

  @media (min-width: $breakpoint-tablet) {
    gap: var(--gutter-md);
  }

  @media (min-width: $breakpoint-laptop) {
    grid-template-columns: repeat(9, minmax(0, 1fr));
  }

  @media (min-width: $breakpoint-desktop) {
    grid-template-columns: repeat(12, minmax(0, 1fr));
  }
}

// Grid that switches from 2 to 4 columns as screen gets bigger
// Usually used with items that have a column width of 1
.content-grid-simple {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  column-gap: var(--gutter-sm);
  row-gap: var(--gutter-md);

  @media (min-width: $breakpoint-tablet) {
    gap: var(--gutter-md);
  }

  @media (min-width: $breakpoint-desktop) {
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }
}

td,
th {
  padding: var(--spacing-xs);
}

.hero-image {
  left: calc(-1 * var(--spacing-lg));
  width: calc(100% + 2 * var(--spacing-lg));
  max-width: calc(100% + 2 * var(--spacing-lg));
  max-height: 50vh;
  height: 50vh;
  position: relative;
  object-fit: cover;
  border-color: var(--type-color);
  border-bottom-width: 1px;
  border-top-width: 1px;
  @media (min-width: $breakpoint-tablet) {
    left: calc(-1 * var(--spacing-lg));
    width: calc(100% + var(--spacing-lg) * 2);
    max-width: calc(100% + var(--spacing-lg) * 2);
    min-height: 250px;
  }
}

hr.full-bleed {
  position: relative;
  left: -2.5rem;
  width: calc(100% + 5rem);
  max-width: calc(100% + 5rem);
  @media (min-width: $breakpoint-tablet) {
    left: calc(-1 * var(--spacing-lg));
    width: calc(100% + var(--spacing-lg) * 2);
    max-width: calc(100% + var(--spacing-lg) * 2);
  }
}

// Hide default webkit search input decoration
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  appearance: none;
}

// Hide scrollbar
.no-scrollbar::-webkit-scrollbar {
  display: none;
}
/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

/** SPECIAL ELEMENTS **/

.renderable-alt {
  display: none;
}

.show-alt-text .renderable-alt {
  display: -webkit-box; // Needs webkit box to support line-clamp
}

.dark-theme.monochrome-theme .renderable-alt{
  color: var(--type-black); 
}

.skip-to-main {
  position: absolute;
  left: -1000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.skip-to-main:focus {
  left: 0;
  top: 0;
  width: auto;
  height: auto;
  overflow: visible;
  z-index: 1000;
  background: #fff;
  padding: 10px;
  border: 2px solid #000;
}

// Donate banner custom properties
body {
  --donate-banner-dark: #c01c4c;
  --donate-banner-background: var(--donate-p5-background);
}

